kubernetes/deployment.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.cmd: kompose convert -o deployment.yml
      kompose.service.type: LoadBalancer
      kompose.version: 1.17.0 (a74acad)
      service.spec.externalTrafficPolicy: Local
    creationTimestamp: null
    labels:
      io.kompose.service: api
    name: api
  spec:
    ports:
    - name: "5900"
      port: 5900
      targetPort: 5900
    selector:
      io.kompose.service: api
    type: LoadBalancer
  status:
    loadBalancer: {}
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      kompose.cmd: kompose convert -o deployment.yml
      kompose.service.type: LoadBalancer
      kompose.version: 1.17.0 (a74acad)
      service.spec.externalTrafficPolicy: Local
    creationTimestamp: null
    labels:
      io.kompose.service: api
    name: api
  spec:
    replicas: 1
    strategy: {}
    template:
      metadata:
        creationTimestamp: null
        labels:
          io.kompose.service: api
      spec:
        containers:
        - env:
          - name: GCS_BUCKET
            value: breef-models
          - name: SKIPTHOUGHTS_MODELS_PATH
            value: /mnt/disk/models/
          - name: SKIPTHOUGHTS_TABLES_PATH
            value: /mnt/disk/models/
          image: gcr.io/breef-247014/breef_api
          name: short-api
          ports:
          - containerPort: 5900
          volumeMounts:
          - mountPath: "/mnt/disk"
            name: short-disk
          resources: 
            requests:
              memory: "8096Mi"
              cpu: "500m"
            limits:
              memory: "16384Mi"
              cpu: "1000m"
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
        volumes:
        - name: short-disk
          persistentVolumeClaim:
            claimName: short-disk
        restartPolicy: Always
  status: {}
kind: List
metadata: {}
